--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Ubuntu&display=swap");
+
+/*
+font-family: 'Inter', sans-serif;
+font-family: 'Ubuntu', sans-serif;
+
+ Light/Regular/Medium/Semi bold/Bold
+*/
+
 * {
   margin: 0;
   padding: 0;
