--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ font-family: 'Ubuntu', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+ 
 }
 
 body {
@@ -20,6 +21,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: red;
 }
 
 code {
