--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: red;
+  background-color: rgb(165, 133, 133);
 }
 
 code {
