finish sign in layout

--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,11 @@ a {
 .gap2 {
   gap: 16px;
 }
+
+.column {
+  flex-direction: column;
+}
+
+.background_linear {
+  background: linear-gradient(107.03deg, #6b0fa9 13.93%, #4d0eb8 94.5%);
+}
