--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,7 @@ a {
 .background_linear {
   background: linear-gradient(107.03deg, #6b0fa9 13.93%, #4d0eb8 94.5%);
 }
+
+.MuiPaper-root > div > div:first-child {
+  display: none !important;
+}
