--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,9 @@ code {
 .flex-end {
   justify-content: flex-end;
 }
+.flex-start {
+  justify-content: flex-start;
+}
 .pointer {
   cursor: pointer;
 }
