add localstorage add injectstore for get store and add forms for add product and add upload image and add axios instance and resolved home page and resolved signin component and resolved layout and resolved approutes and save data in utils file for add product

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,9 @@ code {
 .flex-end {
   justify-content: flex-end;
 }
+.flex-start {
+  justify-content: flex-start;
+}
 .pointer {
   cursor: pointer;
 }
@@ -64,10 +67,18 @@ code {
   align-items: center;
 }
 
+.text-center {
+  text-align: center;
+}
+.text-left {
+  text-align: left;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
+
 .none {
   visibility: hidden;
   height: 0 !important;
