--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,10 @@ code {
   display: flex;
   align-items: center;
 }
+.evenly {
+  display: flex;
+  justify-content: space-evenly;
+}
 
 a {
   color: inherit;
@@ -89,7 +93,9 @@ a {
 .column {
   flex-direction: column;
 }
-
+.size14 {
+  font-size: 14px;
+}
 .background_linear {
   background: linear-gradient(107.03deg, #6b0fa9 13.93%, #4d0eb8 94.5%);
 }
