made provisions for local storage and created classes for scroll and remove dispatch and add astericks and add function delete for products and change provision color and add errors and create showuploadImage component for upload image and add function for delete, edit image

--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,16 @@ a {
   min-width: 0 !important;
   padding: 0 !important;
 }
+.scroll {
+  overflow: auto;
+}
+.scroll_tab::-webkit-scrollbar {
+  display: none;
+}
+
+.fullWidth {
+  width: 100%;
+}
 
 .gap {
   gap: 8px;
