--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ code {
   justify-content: flex-end;
 }
 .flex-start {
+  display: flex;
   justify-content: flex-start;
 }
 .pointer {
@@ -48,7 +49,11 @@ code {
 .transition {
   transition: 0.3s;
 }
+.display {
+  display: flex;
+}
 .between {
+  display: flex;
   justify-content: space-between;
 }
 .center {
@@ -78,12 +83,17 @@ code {
 .text-left {
   text-align: left;
 }
+.ul {
+  list-style: none;
+}
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
+.m-auto {
+  margin: 0 auto;
+}
 .none {
   visibility: hidden;
   height: 0 !important;
