--- a/src/index.css
+++ b/src/index.css
@@ -125,13 +125,23 @@ a {
 .column {
   flex-direction: column;
 }
+
 .size14 {
   font-size: 14px;
 }
+
 .background_linear {
   background: linear-gradient(107.03deg, #6b0fa9 13.93%, #4d0eb8 94.5%);
 }
 
-.MuiPickersPopper-paper > div > div:first-child {
+.MuiPickersPopper-paper > div > div:first-of-type {
   display: none !important;
+}
+
+.grid {
+  display: grid;
+}
+
+.wrap {
+  flex-wrap: wrap;
 }
