added some classname for flex and made asterist color main

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,14 @@ code {
 .flex-end {
   justify-content: flex-end;
 }
+.align-end {
+  display: flex;
+  align-items: flex-end;
+}
+.align-start {
+  display: flex;
+  align-items: flex-start;
+}
 .flex-start {
   display: flex;
   justify-content: flex-start;
@@ -134,4 +142,8 @@ a {
 
 .MuiPickersPopper-paper > div > div:first-child {
   display: none !important;
+}
+
+.MuiFormLabel-asterisk {
+  color: red;
 }
